fix tab content white space

--- a/src/templates/Agenda/Agenda.module.sass
+++ b/src/templates/Agenda/Agenda.module.sass
@@ -3,9 +3,7 @@
 .bottom_bar
 	@include layout.row-left
 	gap: 30px
-	height: 90px
 	width: 100%
-	padding: 30px
 	
 .bottom_bar_space
 	@include layout.grow
