--- a/src/templates/ExpedientList/ExpedientList.module.sass
+++ b/src/templates/ExpedientList/ExpedientList.module.sass
@@ -4,9 +4,7 @@
 .container
 	@include layout.grow
 	@include layout.column-top
-	margin: 40px
-	padding: 0px 4px 0px 4px
-	width: calc(100% - 40px)
+	width: 100%
 	flex-shrink: 1
 	overflow-y: auto
 
