--- a/src/templates/Historial/Historial.module.sass
+++ b/src/templates/Historial/Historial.module.sass
@@ -6,6 +6,4 @@
 .bottom_bar
 	@include layout.row-right
 	gap: 30px
-	height: 90px
 	width: 100%
-	padding: 30px
