--- a/src/templates/TabSystem/TabSystem.module.sass
+++ b/src/templates/TabSystem/TabSystem.module.sass
@@ -34,3 +34,5 @@ $height: 40px
 	overflow: hidden
 	border: theme.$stroke
 	border-top: none
+	padding: 30px
+	gap: 30px
